--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mysql": "^2.18.1",
     "nodemon": "^2.0.7",
     "react": "^17.0.2",
+    "react-calendar": "^3.3.1",
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
